# crisis

./: .gitignore  README.md  guardrails.json
backend/: .env.example  .gitignore  LESSONS_MEMORY_SYSTEM.md  README.md  check_db.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  abm_calibrate.py  abm_cases.py  abm_flow.py  abm_impact.py  abm_sim.py  agent_router.py  alerts.py  api_kpis.py  api_rss.py  api_signals.py  api_v3.py  cascade_sim.py  causal_validate.py  cluster_link.py  db.py  db_write.py  debate.py  decisions.py  deer_flow.py  deliberation_jobs.py  expert_chat.py  forecaster.py  graph_builder.py  graph_real.py  guardrails_gateway.py  guardrails_store.py  jordan_water_baseline.py  lessons.py  lessons_backfill.py  lessons_db.py  lessons_pinecone.py  llm.py  main.py  main_v2.py  memory_light.py  mesa_sim.py  news_rss.py  proof.py  provenance.py  (+16 more)
backend/app/api/: router.py
backend/app/core/: config.py  database.py
backend/app/engine/: types.py
backend/app/llm/: client.py  json_mode.py
backend/app/migrations/: create_guardrails_table.py  create_news_table.py
backend/app/packs/: base.py  registry.py
backend/app/repositories/: base.py  factory.py
backend/app/scholar/: __init__.py  crossref.py  fusion.py  openalex.py  (+2 more)
backend/scraper/: insert_curated_cases.py  scrape_fema.py  scrape_gdacs.py  scrape_ifrc.py  scrape_ocha.py  scrape_preventionweb.py  scrape_reliefweb.py  scrape_unicef.py  scrape_who.py  scrape_wikipedia.py  scrape_worldbank.py
backend/scripts/: check_env.py  replay_signals.py  run_demo.py
backend/tests/: conftest.py
(+235 files in other folders)
