[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "crisis-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-ulid>=2.2",
  "structlog>=24.1",
  "redis>=5.0",
  "arq>=0.26",
  "httpx>=0.27",
  # swarm + llm (local Ollama)
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langchain-ollama>=0.2",
  # engine libs
  "rustworkx>=0.15",
  "networkx>=3.3",
  "numpy>=1.26",
  "scipy>=1.13",
  "pyod>=1.1",
  "ortools>=9.10",
  # database (VOC360 PostgreSQL)
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "psycopg2-binary>=2.9",
  "greenlet>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.10"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
